force-app/main/default/objects/Contact_Upload__c/Contact_Upload__c.object-meta.xml
<CustomObject>
    <description>Contains records representing a batch of Contacts to be added to Marketing Subscriptions</description>
    <label>Contact Upload</label>
    <nameField>
        <displayFormat>CU-{0000}</displayFormat>
        <label>Contact Upload  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>