force-app/main/default/objects/Contact_Upload__c/fields/Failed_Records__c.field-meta.xml
<CustomField>
    <fullName>Failed_Records__c</fullName>
    <label>Failed Records</label>
    <summaryFilterItems>
        <field>Contact_Upload_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Contact_Upload_Detail__c.Contact_Upload__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>