force-app/main/default/objects/Contact_Upload__c/fields/Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Records_Processed__c</fullName>
    <label>Records Processed</label>
    <summaryForeignKey>Contact_Upload_Detail__c.Contact_Upload__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>