force-app/main/default/objects/Contact_Upload__c/fields/Successful_Records__c.field-meta.xml
<CustomField>
    <fullName>Successful_Records__c</fullName>
    <label>Successful Records</label>
    <summaryFilterItems>
        <field>Contact_Upload_Detail__c.Status__c</field>
        <operation>notEqual</operation>
        <value>''</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contact_Upload_Detail__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Contact_Upload_Detail__c.Contact_Upload__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>