force-app/main/default/objects/Contact_Upload__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Failed_Records__c</columns>
    <columns>Records_Processed__c</columns>
    <columns>Status__c</columns>
    <columns>Successful_Records__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>College Bound Parent</value>
    </filters>
    <label>All</label>
</ListView>