force-app/main/default/objects/Contact_Upload__c/listViews/All_CUs.listView-meta.xml
<ListView>
    <fullName>All_CUs</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Records_Processed__c</columns>
    <columns>Successful_Records__c</columns>
    <columns>Failed_Records__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All CUs</label>
</ListView>